# cocoa

./: .cocoa.toml  .gitignore  AGENTS.md  AI_IMPLEMENTATION_PLAN.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  TESTING.md  devenv.nix  devenv.yaml  flake.nix
devenv/: devenv.nix
docs/: ai-implementation-plan.md  remaining-work-plan.md  spec.md  testing.md
docs/notes/: lockfile-handlers.md
docs/user-guide/: README.md  ai-providers.md  changelogs.md  ci-cd.md  configuration.md  creating-commits.md  git-hooks.md  installation.md  linting-commits.md  migration.md  quick-start.md  troubleshooting.md  versioning.md
locales/: en.yaml
src/: ai.rs  changelog.rs  cli.rs  cmd.rs  commit.rs  config.rs  generate.rs  git_ops.rs  hook.rs  i18n.rs  init.rs  interactive.rs  lib.rs  lint.rs  main.rs  migrate.rs  release.rs  security.rs  style.rs  tag.rs  version.rs
src/ai/: client.rs  config.rs  mod.rs  prompt.rs  provider.rs
src/changelog/: mod.rs  parser.rs  renderer.rs
src/cmd/: bump.rs  changelog.rs  commit.rs  generate.rs  hook.rs  init.rs  lint.rs  man.rs  migrate.rs  release.rs  tag.rs  unhook.rs
src/migrate/: commitlint.rs  conventional_changelog.rs  semantic_release.rs
src/version/: calver.rs  cargo_lock.rs  cargo_manifest.rs  command.rs  detect.rs  handlers.rs  mod.rs  npm.rs  plain.rs  pnpm.rs  pyproject.rs  regex_handler.rs  semver.rs
tests/: config_integration_test.rs  e2e_bump_test.rs  e2e_changelog_test.rs  e2e_hook_test.rs  e2e_init_test.rs  e2e_lint_test.rs  e2e_migrate_test.rs  e2e_release_test.rs  e2e_tag_test.rs  git_integration_test.rs  version_integration_test.rs
tests/fixtures/commit_messages/: full_commit_message.txt  valid.txt  with_breaking.txt
tests/fixtures/configs/: minimal.toml  (+1 more)
tests/helpers/: git_repo.rs  mock_ai.rs  mod.rs
