[package]
name = "cocoa"
version = "0.1.0"
edition = "2024"
authors = ["municorn <municorn@musicaloft.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
regex = "1"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
