[package]
name = "cocoa"
version = "0.1.0"
edition = "2024"
authors = ["municorn <municorn@musicaloft.com>"]

[lib]
name = "cocoa"
path = "src/lib.rs"

[[bin]]
name = "cocoa"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
regex = "1"
thiserror = "2"
anyhow = "1"
console = "0.16"
dialoguer = "0.11"
nom = "8"
genai = "0.4"
tokio = { version = "1", features = ["full"] }
git2 = "0.20.2"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3"
