[package]
name = "cocoa"
version = "0.1.0"
edition = "2024"
authors = ["municorn <municorn@musicaloft.com>"]

[lib]
name = "cocoa"
path = "src/lib.rs"

[[bin]]
name = "cocoa"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
regex = "1"
thiserror = "2"
anyhow = "1"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
nom = "8"
genai = "0.5"
tokio = { version = "1", features = ["full"] }
git2 = "0.20.2"
chrono = "0.4"
minijinja = "2.18.0"
semver = "1.0.27"
rust-i18n = "3.1.5"
serde_yml = "0.0.12"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3"
